--- a/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
+++ b/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
@@ -6,69 +6,73 @@
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="400" d:DesignWidth="500">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
-        </ResourceDictionary>
-    </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
+             d:DesignHeight="400" d:DesignWidth="1200">
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+		</ResourceDictionary>
+	</UserControl.Resources>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
 
-        <Border BorderBrush="Black" BorderThickness="0,0,0,4" Margin="10,0">
-            <TextBlock Text="Account beheer" Style="{DynamicResource LabelTitleStyle}" HorizontalAlignment="Center" />
-        </Border>
+		<Border BorderBrush="Black" BorderThickness="0,0,0,4" Margin="10,0">
+			<TextBlock Text="Account beheer" Style="{DynamicResource LabelTitleStyle}" HorizontalAlignment="Center" />
+		</Border>
 
-        <Grid Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
-            
-            <StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
-                <Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
-                <Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
+		<Grid Grid.Row="1">
+			<Grid.ColumnDefinitions>
+				<ColumnDefinition />
+				<ColumnDefinition Width="Auto" />
+			</Grid.ColumnDefinitions>
+
+			<StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
+				<Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
+				<Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
                         Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
-                <Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
+				<Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
                          Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
-            </StackPanel>
-            
-            <TextBox Grid.Column="2" Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}"  Margin="10,5" VerticalAlignment="Center" HorizontalAlignment="Right" MinWidth="150"
-                     Style="{DynamicResource TextBoxStyle}"/>
-        </Grid>
+			</StackPanel>
+			<Border Grid.Column="2" >
+				<StackPanel Orientation="Horizontal" >
+					<TextBlock Text="Filter" VerticalAlignment="Center" Style="{DynamicResource LabelStyle}" Margin="10,0"/>
+					<TextBox Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}"  Margin="10,5" VerticalAlignment="Center" HorizontalAlignment="Right" MinWidth="150"
+									Style="{DynamicResource TextBoxStyle}"/>
+				</StackPanel>
+			</Border>
+		</Grid>
 
-        <ScrollViewer Grid.Row="2" Margin="2">
-            <ItemsControl ItemsSource="{Binding FilteredAccounts}" >
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
+		<ScrollViewer Grid.Row="2" Margin="2">
+			<ItemsControl ItemsSource="{Binding FilteredAccounts}" >
+				<ItemsControl.ItemsPanel>
+					<ItemsPanelTemplate>
+						<StackPanel />
+					</ItemsPanelTemplate>
+				</ItemsControl.ItemsPanel>
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
                                 cal:Message.Attach="[Event MouseUp] = [Action SelectAction($this)]">
-                            <TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
-                            
-                            <Border.Style>
-                                <Style TargetType="Border">
-                                    <Setter Property="Background" Value="#FFEE9449" />
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Selected}" Value="True" >
-                                            <Setter Property="Background" Value="#FF88D11E" />
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Border.Style>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
+							<TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
 
-    </Grid>
+							<Border.Style>
+								<Style TargetType="Border">
+									<Setter Property="Background" Value="#FFEE9449" />
+									<Style.Triggers>
+										<DataTrigger Binding="{Binding Selected}" Value="True" >
+											<Setter Property="Background" Value="#FF88D11E" />
+										</DataTrigger>
+									</Style.Triggers>
+								</Style>
+							</Border.Style>
+						</Border>
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</ScrollViewer>
+
+	</Grid>
 </UserControl>
