--- a/DayCare/DayCare/Views/Reports/MainReportsView.xaml
+++ b/DayCare/DayCare/Views/Reports/MainReportsView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="600" d:DesignWidth="600">
     <Grid>
 			<WrapPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="25">
 			<Border Width="150" Height="200" Margin="25">
@@ -18,7 +18,18 @@
                             Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
 				</Grid>
 			</Border>
-
+				
+			<Border Width="150" Height="200" Margin="25">
+				<Grid>
+					<Grid.RowDefinitions>
+						<RowDefinition Height="1*"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Image Source="/DayCare;component/Resources/report1.png"/>
+					<Button Grid.Row="1" Content="Weeklijst" x:Name="WeekListAction"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+				</Grid>
+			</Border>
 		</WrapPanel>
 	</Grid>
 </UserControl>
