--- a/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
+++ b/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
@@ -5,6 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:cal="http://www.caliburnproject.org"
              xmlns:vc="clr-namespace:DayCare.Converters"
+						 xmlns:bh="clr-namespace:DayCare.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="1200">
 	<UserControl.Resources>
@@ -55,7 +56,7 @@
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
 						<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
-                                cal:Message.Attach="[Event MouseUp] = [Action SelectAction($this)]">
+                                cal:Message.Attach="[Event MouseUp] = [Action SelectAction($this)]" bh:DoubleClickEvent.AttachAction="OpenAction($this)">
 							<TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
 
 							<Border.Style>
