--- a/DayCare/DayCare/Views/Accounts/AddAccountView.xaml
+++ b/DayCare/DayCare/Views/Accounts/AddAccountView.xaml
@@ -4,31 +4,32 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:cal="http://www.caliburnproject.org"
-             mc:Ignorable="d" >
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
+             mc:Ignorable="d" 
+						 Loaded="UserControl_Loaded">
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
 
-        <Border BorderBrush="Black" BorderThickness="2" CornerRadius="5">
-            <Grid Margin="10">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="20"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
+		<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" >
+			<Grid Margin="10" >
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="20"/>
+					<ColumnDefinition Width="1*"/>
+				</Grid.ColumnDefinitions>
 
-                <TextBlock Text="Naam" Style="{DynamicResource LabelStyle}" />
-                <TextBox Text="{Binding Name}" Margin="5" Grid.Column="2" Style="{DynamicResource TextBoxStyle}" MinWidth="200"/>
-            </Grid>
-            <!--<ContentControl cal:View.Model="{Binding Detail}" Margin="10" />-->
-        </Border>
+				<TextBlock Text="Naam" Style="{DynamicResource LabelStyle}" />
+				<TextBox x:Name="AccountName" Text="{Binding Name}" Margin="5" Grid.Column="2" Style="{DynamicResource TextBoxStyle}" MinWidth="200" />
+			</Grid>
+			<!--<ContentControl cal:View.Model="{Binding Detail}" Margin="10" />-->
+		</Border>
 
 
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-            <Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
-            <Button x:Name="CancelAction" Content="Annuleren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
-        </StackPanel>
-    </Grid>
+		<StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+			<Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
+			<Button x:Name="CancelAction" Content="Annuleren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
+		</StackPanel>
+	</Grid>
 </UserControl>
