--- a/DayCare/DayCare/Views/Expenses/ExpenseMainView.xaml
+++ b/DayCare/DayCare/Views/Expenses/ExpenseMainView.xaml
@@ -1,21 +1,16 @@
-﻿<UserControl x:Class="DayCare.Views.Precense.PresenceMainView"
+﻿<UserControl x:Class="DayCare.Views.Expenses.ExpenseMainView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:cal="http://www.caliburnproject.org"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+						 xmlns:cal="http://www.caliburnproject.org"
 						 xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="600">
-	<UserControl.Resources>
-		<ResourceDictionary>
-			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
-		</ResourceDictionary>
-	</UserControl.Resources>
+             d:DesignHeight="300" d:DesignWidth="300">
 	<Grid>
 		<Border Margin="10" >
 			<ScrollViewer>
-				<ItemsControl ItemsSource="{Binding PresenceList}">
+				<ItemsControl ItemsSource="{Binding Expenses}">
 					<ItemsControl.ItemsPanel>
 						<ItemsPanelTemplate>
 							<WrapPanel />
@@ -37,7 +32,7 @@
 										<!--<Image Source="/DayCare;component/Resources/close.png" HorizontalAlignment="Right" VerticalAlignment="Top" Height="56" Margin="0" Width="51"
 																				 Visibility="{Binding ToLate, Converter={StaticResource BooleanVisibilityConverter}}"/>-->
 										<Viewbox Grid.Row="1" Margin="0">
-											<TextBlock Text="{Binding Name}" Style="{DynamicResource LabelStyle}" Height="41" Width="Auto" />
+											<TextBlock Text="{Binding Tag.FirstName}" Style="{DynamicResource LabelStyle}" Height="41" Width="Auto" />
 										</Viewbox>
 									</Grid>
 								</Border>
