--- a/DayCare/DayCare/Views/Members/AddMemberView.xaml
+++ b/DayCare/DayCare/Views/Members/AddMemberView.xaml
@@ -4,37 +4,40 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" >
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="1*"/>
-        </Grid.RowDefinitions>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="1*"/>
+		</Grid.RowDefinitions>
 
-        <Border BorderBrush="Black" BorderThickness="2" CornerRadius="5">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="20"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition/>
-                </Grid.RowDefinitions>
+		<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5">
+			<Grid>
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto"/>
+					<ColumnDefinition Width="20"/>
+					<ColumnDefinition Width="1*"/>
+				</Grid.ColumnDefinitions>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition Height="Auto"/>
+					<RowDefinition/>
+				</Grid.RowDefinitions>
 
-                <TextBlock Text="Voornaam" Style="{DynamicResource LabelStyle}" />
-                <TextBlock Grid.Row="1" Text="Achternaam" Style="{DynamicResource LabelStyle}" />
+				<TextBlock Text="Voornaam" Style="{DynamicResource LabelStyle}" />
+				<TextBlock Grid.Row="1" Text="Achternaam" Style="{DynamicResource LabelStyle}" />
+				<TextBlock Grid.Row="2" Text="Telefoon" Style="{DynamicResource LabelStyle}" />
 
-                <TextBox Text="{Binding FirstName}" Grid.Column="2" Style="{DynamicResource TextBoxStyle}" Margin="4" MinWidth="200"/>
-                <TextBox Text="{Binding LastName}" Grid.Column="2" Grid.Row="1" Style="{DynamicResource TextBoxStyle}" Margin="4" MinWidth="200"/>
+				<TextBox Text="{Binding FirstName}" Grid.Column="2" Style="{DynamicResource TextBoxStyle}" Margin="4" MinWidth="200"/>
+				<TextBox Text="{Binding LastName}" Grid.Column="2" Grid.Row="1" Style="{DynamicResource TextBoxStyle}" Margin="4" MinWidth="200"/>
+				<TextBox Text="{Binding Phone}" Grid.Column="2" Grid.Row="2" Style="{DynamicResource TextBoxStyle}" Margin="4" MinWidth="200"/>
 
-            </Grid>
-        </Border>
+			</Grid>
+		</Border>
 
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-            <Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
-            <Button x:Name="CancelAction" Content="Annuleren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
-        </StackPanel>
-    </Grid>
+		<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
+			<Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
+			<Button x:Name="CancelAction" Content="Annuleren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
+		</StackPanel>
+	</Grid>
 </UserControl>
