--- a/DayCare/DayCare/Views/Reports/MainReportsView.xaml
+++ b/DayCare/DayCare/Views/Reports/MainReportsView.xaml
@@ -30,6 +30,18 @@
                             Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
 				</Grid>
 			</Border>
+
+			<Grid Width="Auto" Height="200" Margin="25" ClipToBounds="False">
+				<Grid >
+					<Grid.RowDefinitions>
+						<RowDefinition Height="1*"/>
+						<RowDefinition Height="Auto"/>
+					</Grid.RowDefinitions>
+					<Image Source="/DayCare;component/Resources/report1.png" Width="150"/>
+					<Button Grid.Row="1" Content="Ouders Telefoon lijst" x:Name="ParentPhoneAction"  HorizontalAlignment="Center"
+                            Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
+				</Grid>
+			</Grid>
 		</WrapPanel>
 	</Grid>
 </UserControl>
