--- a/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
+++ b/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
@@ -47,7 +47,7 @@
 		</Grid>
 
 		<ScrollViewer Grid.Row="2" Margin="2">
-			<ItemsControl ItemsSource="{Binding FilteredAccounts}" >
+			<ItemsControl ItemsSource="{Binding FilteredItems}" >
 				<ItemsControl.ItemsPanel>
 					<ItemsPanelTemplate>
 						<StackPanel />
@@ -56,7 +56,7 @@
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
 						<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
-                                cal:Message.Attach="[Event MouseUp] = [Action SelectAction($this)]" bh:DoubleClickEvent.AttachAction="OpenAction($this)">
+                                cal:Message.Attach="[Event MouseUp] = [Action SelectItem($this)]" bh:DoubleClickEvent.AttachAction="OpenAction($this)">
 							<TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
 
 							<Border.Style>
