--- a/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
+++ b/DayCare/DayCare/Views/Accounts/AccountMainView.xaml
@@ -11,6 +11,7 @@
 	<UserControl.Resources>
 		<ResourceDictionary>
 			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+			<vc:InverseBooleanVisibilityConverter x:Key="InverseBooleanVisibilityConverter" />
 		</ResourceDictionary>
 	</UserControl.Resources>
 	<Grid>
@@ -26,19 +27,28 @@
 
 		<Grid Grid.Row="1">
 			<Grid.ColumnDefinitions>
-				<ColumnDefinition />
+				<ColumnDefinition Width="1*" />
 				<ColumnDefinition Width="Auto" />
 			</Grid.ColumnDefinitions>
 
 			<StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
-				<Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
-				<Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
-                        Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
-				<Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
-                         Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
+				<StackPanel Visibility="{Binding ShowDeleted, Converter= {StaticResource ResourceKey=InverseBooleanVisibilityConverter}  }" Orientation="Horizontal">
+					<Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
+					<Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
+													Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
+					<Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
+													 Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}" />
+				</StackPanel>
+				<StackPanel Visibility="{Binding ShowDeleted, Converter= {StaticResource ResourceKey=BooleanVisibilityConverter}}" Orientation="Horizontal">
+
+					<Button x:Name="ReactivateAction" Content="Activeren" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" Margin="5,0"
+								Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}" />
+					
+				</StackPanel>
 			</StackPanel>
 			<Border Grid.Column="2" >
 				<StackPanel Orientation="Horizontal" >
+					<Button x:Name="ToggleDeletedAction" Content="{Binding DeletedLabel}" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
 					<TextBlock Text="Filter" VerticalAlignment="Center" Style="{DynamicResource LabelStyle}" Margin="10,0"/>
 					<TextBox Text="{Binding Filter, UpdateSourceTrigger=PropertyChanged}"  Margin="10,5" VerticalAlignment="Center" HorizontalAlignment="Right" MinWidth="150"
 									Style="{DynamicResource TextBoxStyle}"/>
