--- a/DayCare/DayCare/Views/Children/ChildrenMainView.xaml
+++ b/DayCare/DayCare/Views/Children/ChildrenMainView.xaml
@@ -28,7 +28,7 @@
 		</StackPanel>
 
 		<ScrollViewer Grid.Row="2" Margin="2">
-			<ItemsControl ItemsSource="{Binding Children}" >
+			<ItemsControl ItemsSource="{Binding Items}" >
 				<ItemsControl.ItemsPanel>
 					<ItemsPanelTemplate>
 						<StackPanel />
@@ -37,7 +37,7 @@
 				<ItemsControl.ItemTemplate>
 					<DataTemplate>
 						<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
-										cal:Message.Attach="[Event MouseUp] = [Action SelectChild($this)]"
+										cal:Message.Attach="[Event MouseUp] = [Action SelectItem($this)]"
 										bh:DoubleClickEvent.AttachAction="OpenAction($this)" >
 							<Grid>
 								<Grid.ColumnDefinitions>
