--- a/DayCare/DayCare/Views/Members/MembersMainView.xaml
+++ b/DayCare/DayCare/Views/Members/MembersMainView.xaml
@@ -8,54 +8,54 @@
 						 xmlns:bh="clr-namespace:DayCare.Behaviour"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <ResourceDictionary>
-            <vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
-        </ResourceDictionary>
-    </UserControl.Resources>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+		</ResourceDictionary>
+	</UserControl.Resources>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition/>
+		</Grid.RowDefinitions>
 
-        <StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
-            <Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
-            <Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
+		<StackPanel Margin="10,5" Orientation="Horizontal" HorizontalAlignment="Left">
+			<Button x:Name="AddAction" Content="Toevoegen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" />
+			<Button x:Name="EditAction" Content="Wijzigen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}" 
                         Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
-            <Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
+			<Button x:Name="DeleteAction" Content="Verwijderen" Margin="5,0" MinWidth="150" Height="30" Style="{DynamicResource ButtonStyle}"
                          Visibility="{Binding IsItemSelected, Converter={StaticResource BooleanVisibilityConverter}}"/>
-        </StackPanel>
+		</StackPanel>
 
-        <ScrollViewer Grid.Row="2" Margin="2">
-            <ItemsControl ItemsSource="{Binding Items}" >
-                <ItemsControl.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel />
-                    </ItemsPanelTemplate>
-                </ItemsControl.ItemsPanel>
-                <ItemsControl.ItemTemplate>
-                    <DataTemplate>
-                        <Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
+		<ScrollViewer Grid.Row="2" Margin="2">
+			<ItemsControl ItemsSource="{Binding Items}" >
+				<ItemsControl.ItemsPanel>
+					<ItemsPanelTemplate>
+						<StackPanel />
+					</ItemsPanelTemplate>
+				</ItemsControl.ItemsPanel>
+				<ItemsControl.ItemTemplate>
+					<DataTemplate>
+						<Border BorderBrush="Black" BorderThickness="2" CornerRadius="5" MinHeight="75" Margin="5,10"
                                 cal:Message.Attach="[Event MouseUp] = [Action SelectItem($this)]"
-																bh:DoubleClickEvent.AttachAction="OpenActon($this)">
-                            <TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
+																bh:DoubleClickEvent.AttachAction="OpenAction($this)">
+							<TextBlock Text="{Binding .Details}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
 
-                            <Border.Style>
-                                <Style TargetType="Border">
-                                    <Setter Property="Background" Value="#FFEE9449" />
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding Selected}" Value="True" >
-                                            <Setter Property="Background" Value="#FF88D11E" />
-                                        </DataTrigger>
-                                    </Style.Triggers>
-                                </Style>
-                            </Border.Style>
-                        </Border>
-                    </DataTemplate>
-                </ItemsControl.ItemTemplate>
-            </ItemsControl>
-        </ScrollViewer>
+							<Border.Style>
+								<Style TargetType="Border">
+									<Setter Property="Background" Value="#FFEE9449" />
+									<Style.Triggers>
+										<DataTrigger Binding="{Binding Selected}" Value="True" >
+											<Setter Property="Background" Value="#FF88D11E" />
+										</DataTrigger>
+									</Style.Triggers>
+								</Style>
+							</Border.Style>
+						</Border>
+					</DataTemplate>
+				</ItemsControl.ItemTemplate>
+			</ItemsControl>
+		</ScrollViewer>
 
-    </Grid>
+	</Grid>
 </UserControl>
