--- a/DayCare/DayCare/Views/Scheduler/EditChildScheduleView.xaml
+++ b/DayCare/DayCare/Views/Scheduler/EditChildScheduleView.xaml
@@ -74,7 +74,7 @@
 
 									<TextBlock Text="{Binding .Name}" Margin="25,0" Style="{DynamicResource LabelStyle}" VerticalAlignment="Center" />
 
-									<ItemsControl ItemsSource="{Binding Tag.Schedules}" Grid.Column="1">
+									<ItemsControl ItemsSource="{Binding Tag.Details}" Grid.Column="1">
 										<ItemsControl.ItemsPanel>
 											<ItemsPanelTemplate>
 												<StackPanel Orientation="Horizontal" />
@@ -148,12 +148,6 @@
 					</ItemsControl.ItemTemplate>
 				</ItemsControl>
 			</ScrollViewer>
-
 		</Grid>
-
-		<StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,10,10">
-			<!--<Button x:Name="SaveAction" Content="Bewaren" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>-->
-			<Button x:Name="BackAction" Content="Terug" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="100" Margin="5,0"/>
-		</StackPanel>
 	</Grid>
 </UserControl>
