--- a/DayCare/DayCare/Views/Precense/EditPrecenseView.xaml
+++ b/DayCare/DayCare/Views/Precense/EditPrecenseView.xaml
@@ -28,7 +28,7 @@
       </Grid.ColumnDefinitions>
 
       <Border BorderBrush="Orange" BorderThickness="2" Height="220" Width="166" Margin="20,20" CornerRadius="5" Background="White" HorizontalAlignment="Left" VerticalAlignment="Top" >
-        <Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="/DayCare;component/Resources/olaf.png"  Margin="5" Stretch="UniformToFill" />
+        <Image VerticalAlignment="Center" HorizontalAlignment="Center" Source="{Binding Image}"  Margin="5" Stretch="UniformToFill" />
       </Border>
 
       <Grid Grid.Column="1" Grid.IsSharedSizeScope="True">
