--- a/DayCare/DayCare/Views/Scheduler/WeekScheduleView.xaml
+++ b/DayCare/DayCare/Views/Scheduler/WeekScheduleView.xaml
@@ -3,42 +3,97 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+						 xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d">
 	<Grid	Height="90">
-		<Grid.ColumnDefinitions>
-			<ColumnDefinition Width="Auto"/>
-			<ColumnDefinition Width="130"/>
-			<ColumnDefinition Width="130"/>
-			<ColumnDefinition Width="130"/>
-			<ColumnDefinition Width="130"/>
-			<ColumnDefinition Width="130"/>
-		</Grid.ColumnDefinitions>
+		<ItemsControl ItemsSource="{Binding Schedule}" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center">
+			<ItemsControl.ItemsPanel>
+				<ItemsPanelTemplate>
+					<UniformGrid Columns="5"/>
+				</ItemsPanelTemplate>
+			</ItemsControl.ItemsPanel>
+			
+			<ItemsControl.ItemTemplate>
+				<DataTemplate>
+					<Border BorderBrush="Black" BorderThickness="1" CornerRadius="5" Margin="2,1" Width="100" Height="80" >
+						<Grid>
+							<Grid.RowDefinitions>
+								<RowDefinition Height="Auto"/>
+								<RowDefinition Height="1*"/>
+								<RowDefinition Height="1*"/>
+							</Grid.RowDefinitions>
 
-		<Grid.RowDefinitions>
-			<RowDefinition Height="Auto"/>
-			<RowDefinition Height="1*"/>
-			<RowDefinition Height="1*"/>
-		</Grid.RowDefinitions>
+							<Grid>
+								<TextBlock Text="{Binding .Day}" FontFamily="Comic Sans MS" FontSize="18" HorizontalAlignment="Center" />
 
-		<TextBlock Text="Voormiddag" Grid.Row="1" Style="{DynamicResource GroupBoxHeaderStyle}" Margin="10,0"/>
-		<TextBlock Text="Namiddag"  Grid.Row="2" Style="{DynamicResource GroupBoxHeaderStyle}" Margin="10,0"/>
+								<Border Margin="0" cal:Message.Attach="[Event MouseUp] = [Action ToggleAction($this)]" >
+									<Border.Style>
+										<Style TargetType="Border">
+											<Setter Property="Background" Value="Transparent" />
+											<Style.Triggers>
+												<Trigger Property="IsMouseOver" Value="True">
+													<Setter Property="Background" Value="#25000000" />
+												</Trigger>
+											</Style.Triggers>
+										</Style>
+									</Border.Style>
+								</Border>
 
-		<TextBlock Text="Maandag" Grid.Column="1" Style="{DynamicResource GroupBoxHeaderStyle}" Margin="10,0" HorizontalAlignment="Center"/>
-		<TextBlock Text="Dinsdag" Grid.Column="2" Style="{DynamicResource GroupBoxHeaderStyle}" Margin="10,0" HorizontalAlignment="Center"/>
-		<TextBlock Text="Woensdag" Grid.Column="3" Style="{DynamicResource GroupBoxHeaderStyle}" Margin="10,0" HorizontalAlignment="Center"/>
-		<TextBlock Text="Donderdag" Grid.Column="4" Style="{DynamicResource GroupBoxHeaderStyle}" Margin="10,0" HorizontalAlignment="Center"/>
-		<TextBlock Text="Vrijdag" Grid.Column="5" Style="{DynamicResource GroupBoxHeaderStyle}" Margin="10,0" HorizontalAlignment="Center"/>
+							</Grid>
 
+							<Border Margin="2" Grid.Row="1" cal:Message.Attach="[Event MouseUp] = [Action ToggleMorningAction($this)]">
+								<Border.Style>
+									<Style TargetType="Border">
+										<Setter Property="Background" Value="Transparent" />
+										<Style.Triggers>
+											<DataTrigger Binding="{Binding Morning}" Value="True">
+												<Setter Property="Background" Value="#FFA4F036" />
+											</DataTrigger>
+											<Trigger Property="IsMouseOver" Value="True">
+												<Setter Property="Background" Value="#25000000" />
+											</Trigger>
+										</Style.Triggers>
+									</Style>
+								</Border.Style>
+							</Border>
 
-		<CheckBox Grid.Column="1" Grid.Row="1" IsChecked="{Binding MondayMorning}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="1" Grid.Row="2" IsChecked="{Binding MondayAfternoon}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="2" Grid.Row="1" IsChecked="{Binding TuesdayMorning}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="2" Grid.Row="2" IsChecked="{Binding TuesdayAfternoon}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="3" Grid.Row="1" IsChecked="{Binding WednesdayMorning}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="3" Grid.Row="2" IsChecked="{Binding WednesdayAfternoon}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="4" Grid.Row="1" IsChecked="{Binding ThursdayMorning}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="4" Grid.Row="2" IsChecked="{Binding ThursdayAfternoon}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="5" Grid.Row="1" IsChecked="{Binding FridayMorning}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-		<CheckBox Grid.Column="5" Grid.Row="2" IsChecked="{Binding FridayAfternoon}" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+							<Border Margin="2" Grid.Row="2" cal:Message.Attach="[Event MouseUp] = [Action ToggleAfternoonAction($this)]">
+								<Border.Style>
+									<Style TargetType="Border">
+										<Setter Property="Background" Value="Transparent" />
+										<Style.Triggers>
+											<DataTrigger Binding="{Binding Afternoon}" Value="True">
+												<Setter Property="Background" Value="#FFA4F036" />
+											</DataTrigger>
+											<Trigger Property="IsMouseOver" Value="True">
+												<Setter Property="Background" Value="#25000000" />
+											</Trigger>
+										</Style.Triggers>
+									</Style>
+								</Border.Style>
+							</Border>
+
+						</Grid>
+						<Border.Style>
+							<Style TargetType="Border">
+								<Setter Property="Background" Value="NavajoWhite" />
+								<Style.Triggers>
+									<DataTrigger Binding="{Binding Active}" Value="False">
+										<Setter Property="Background" Value="Gray" />
+									</DataTrigger>
+									<DataTrigger Binding="{Binding ActiveMonth}" Value="False">
+										<Setter Property="Background" Value="#FFD08016" />
+									</DataTrigger>
+									<!--<DataTrigger Binding="{Binding Weekday}" Value="False">
+										<Setter Property="Background" Value="Gray" />
+									</DataTrigger>-->
+								</Style.Triggers>
+							</Style>
+						</Border.Style>
+					</Border>
+				</DataTemplate>
+			</ItemsControl.ItemTemplate>
+		</ItemsControl>
+
 	</Grid>
 </UserControl>
