--- a/DayCare/DayCare/Views/Scheduler/EditChildCalendarView.xaml
+++ b/DayCare/DayCare/Views/Scheduler/EditChildCalendarView.xaml
@@ -55,6 +55,9 @@
 				<RowDefinition Height="Auto" />
 			</Grid.RowDefinitions>
 
+			<Border>
+				<Button x:Name="AddPatternAction" Margin="0"  Content="Add" Style="{DynamicResource ButtonStyle}" Height="40" Width="100" HorizontalAlignment="Center"/>
+			</Border>
 			<Border Width="1000" HorizontalAlignment="Center" Grid.Column="1">
 				<UniformGrid Columns="7">
 					<Border BorderBrush="Black" BorderThickness="1" CornerRadius="5" Margin="5" Width="100" Height="Auto" Background="#FFE47738">
