--- a/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
+++ b/DayCare/DayCare/Views/Dashboard/DashBoardView.xaml
@@ -4,11 +4,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DayCare.Views.Dashboard"
+             xmlns:vc="clr-namespace:DayCare.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="600" d:DesignWidth="1000">
+	<UserControl.Resources>
+		<ResourceDictionary>
+			<vc:BooleanVisibilityConverter x:Key="BooleanVisibilityConverter" />
+			<vc:InverseBooleanVisibilityConverter x:Key="InverseBooleanVisibilityConverter" />
+		</ResourceDictionary>
+	</UserControl.Resources>
 	<Grid>
 		<WrapPanel VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Margin="25">
-			<Border Width="150" Height="200" Margin="25">
+			<Border Width="150" Height="200" Margin="25" Visibility="{Binding IsPresenceMode, Converter={StaticResource InverseBooleanVisibilityConverter}}">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
@@ -20,7 +27,7 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25">
+			<Border Width="150" Height="200" Margin="25" Visibility="{Binding IsPresenceMode, Converter={StaticResource InverseBooleanVisibilityConverter}}">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
@@ -32,7 +39,7 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25">
+			<Border Width="150" Height="200" Margin="25" Visibility="{Binding IsPresenceMode, Converter={StaticResource InverseBooleanVisibilityConverter}}">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
@@ -44,7 +51,7 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25">
+			<Border Width="150" Height="200" Margin="25" Visibility="{Binding IsPresenceMode, Converter={StaticResource BooleanVisibilityConverter}}">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
@@ -55,8 +62,8 @@
                             Style="{DynamicResource ButtonStyle}" FontFamily="Comic Sans MS" FontSize="22" />
 				</Grid>
 			</Border>
-			
-			<Border Width="150" Height="200" Margin="25">
+
+			<Border Width="150" Height="200" Margin="25" Visibility="{Binding IsPresenceMode, Converter={StaticResource InverseBooleanVisibilityConverter}}">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
@@ -68,7 +75,7 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25">
+			<Border Width="150" Height="200" Margin="25" Visibility="{Binding IsPresenceMode, Converter={StaticResource InverseBooleanVisibilityConverter}}">
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
@@ -80,7 +87,7 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25">
+			<Border Width="150" Height="200" Margin="25" >
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
@@ -92,7 +99,7 @@
 				</Grid>
 			</Border>
 
-			<Border Width="150" Height="200" Margin="25">
+			<Border Width="150" Height="200" Margin="25" >
 				<Grid>
 					<Grid.RowDefinitions>
 						<RowDefinition Height="1*"/>
