--- a/DayCare/DayCare/Views/Dialogs/AddPresenceDialogView.xaml
+++ b/DayCare/DayCare/Views/Dialogs/AddPresenceDialogView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="DayCare.Views.Dialogs.YesNoDialogView"
+﻿<UserControl x:Class="DayCare.Views.Dialogs.AddPresenceDialogView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,13 +7,21 @@
              d:DesignHeight="300" d:DesignWidth="300">
 	<Grid>
 		<Grid.RowDefinitions>
-			<RowDefinition/>
+			<RowDefinition Height="Auto"/>
+			<RowDefinition Height="Auto"/>
 			<RowDefinition Height="Auto"/>
 		</Grid.RowDefinitions>
 
-		<TextBlock Text="{Binding Message}" TextWrapping="Wrap" Style="{DynamicResource LabelStyle}" Margin="10" MinHeight="100"/>
+		<TextBlock Text="Selecteer wie er toegevoegd moet worden" TextWrapping="Wrap" Style="{DynamicResource LabelStyle}" Margin="10" />
+		<ComboBox Grid.Row="1" Margin="10" ItemsSource="{Binding Children}" SelectedItem="{Binding SelectedItem}">
+			<!--<ComboBox.ItemTemplate>
+				<DataTemplate>
+					<TextBlock Binding.
+				</DataTemplate>
+			</ComboBox.ItemTemplate>-->
+		</ComboBox>
 
-		<StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right">
+		<StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
 			<Button x:Name="YesAction" Content="Ja" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="75" Margin="5,0"/>
 			<Button x:Name="NoAction" Content="Nee" Style="{DynamicResource ButtonStyle}" Height="30" MinWidth="75" Margin="5,0"/>
 		</StackPanel>
